--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "boilerplate-auth-react-redux",
+  "name": "leandras-learing-app",
   "version": "1.0.0",
-  "description": "a boilerplate for react web app using global store and auth",
+  "description": "a childs learning app",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Boyd-Thurston/boilerplate-auth-react-redux.git"
+    "url": "git+https://github.com/Boyd-Thurston/LeandrasLearningApp.git"
   },
   "keywords": [
     "boilderplate",
@@ -16,9 +16,9 @@
   "author": "Boyd Thurston",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Boyd-Thurston/boilerplate-auth-react-redux/issues"
+    "url": "https://github.com/Boyd-Thurston/LeandrasLearningApp.git/issues"
   },
-  "homepage": "https://github.com/Boyd-Thurston/boilerplate-auth-react-redux#readme",
+  "homepage": "https://github.com/Boyd-Thurston/LeandrasLearningApp.git#readme",
   "scripts": {
     "build": "webpack",
     "server": "node server",
@@ -47,10 +47,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "jest": "^26.1.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "libsodium-wrappers": "^0.7.6",
-    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -58,10 +58,13 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sqlite3": "^4.2.0",
     "superagent": "^5.2.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "sqlite3": "^4.2.0",
+    "nodemon": "^2.0.4"
   }
 }
