--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start": "run-s build server",
     "dev": "run-p dev:build dev:server",
     "dev:build": "webpack --watch",
-    "dev:server": "nodemon server"
+    "dev:server": "nodemon server",
+    "test": "jest --noStackTrace --watchAll"
   },
   "babel": {
     "plugins": [
@@ -35,6 +36,11 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ]
+  },
+  "jest": {
+    "setupFiles": [
+      "./tests/client/setup-enzyme.js"
     ]
   },
   "dependencies": {
@@ -47,11 +53,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
-    "jest": "^26.1.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "libsodium-wrappers": "^0.7.6",
     "npm-run-all": "^4.1.5",
+    "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -65,6 +71,9 @@
   },
   "devDependencies": {
     "sqlite3": "^4.2.0",
+    "jest": "^26.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "nodemon": "^2.0.4"
   }
 }
