--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1",
     "superagent": "^5.2.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
