--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "npm-run-all": "^4.1.5",
     "pg": "^8.2.1",
     "react": "^16.13.1",
+    "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
